fix: dark mode and light mode styles (#138)
* fix: light mode text colour

* fix: calendar padding and styling

* fix (web): footer colours

* fix: uozone link text

* fix: autocomplete popover behaviour

* fix: autcomplete popover sizing

* fix: justify logo baseline

* fix (web): label width

* chore (web): update schedule-x

* chore (web): update types

* chore (update): react query and next

* chore: add changeset

* fix: ts error in button component

* fix: add comment explain ts error

--- a/apps/web/src/app/app.css
+++ b/apps/web/src/app/app.css
@@ -25,3 +25,8 @@
   background-color: var(--sx-color-primary) !important;
   color: white !important;
 }
+
+.sx__calendar {
+  border-radius: 0px !important;
+  border: none !important;
+}
